fix: solve copy button visibility issue

--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -264,6 +264,10 @@ body .ddoc {
     .highlight .lineNumbers {
       @apply mr-3 !important;
     }
+
+    code {
+      @apply w-full;
+    }
   }
 
   .namespaceItemContent {
